k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thumbor-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8888
      nodePort: 30010
  selector:
    app: thumbor
