k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thumbor-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - image-service.diamond.ac.uk
  rules:
  - host: image-service.diamond.ac.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thumbor-service
            port:
              number: 80
